# video-editor-tauri

./: .env.development  .env.production  .gitignore  Aicut客户端接口.md  api-doc.md  composer-api.md  index.html  macOS打包与上架流程.md  package-lock.json  package.json  pnpm-lock.yaml  projectFile.xml  template.xml  vite.config.js
.github/workflows/: build-macos.yml
public/: googlefonts1.css  googlefonts2.css  tailwindcss.js
scripts/: package-mas-pkg.mjs  prepare-macos-dylibs.mjs
src/: App.vue
src-tauri/: Cargo.toml  Entitlements.appstore.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.dmg.conf.json  tauri.macos.conf.json
src-tauri/icons/: AICut.icns  icon.icns
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/libs/macos/: libcomposer.dylib
src-tauri/libs/macos-bundle/: libX11.6.dylib  libXau.6.dylib  libXdmcp.6.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libintl.8.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libxcb.1.dylib
src-tauri/profiles/: .gitignore  README.md
src-tauri/src/: lib.rs  main.rs
src/api/: project.js  request.js  template.js  user.js
src/assets/: user-agreement.txt
src/components/: SessionExpiredDialogHost.vue  SystemMessageHost.vue
src/router/: index.js
src/utils/: message.js  sessionExpired.js
src/views/: LoginPage.vue  WorkspacePage.vue
